--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <script src="./p5.play.js"></script>
 
     <!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-database.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-database.js"></script>
 
 <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
@@ -16,17 +16,17 @@
 <script>
   // Your web app's Firebase configuration
   var firebaseConfig = {
-    apiKey: "AIzaSyACGng9WZj2H7Ww7I_lUI4EwuO_XUS4jEs",
-    authDomain: "simple-labyrinth-cfb3f.firebaseapp.com",
-    databaseURL: "https://simple-labyrinth-cfb3f-default-rtdb.firebaseio.com",
-    projectId: "simple-labyrinth-cfb3f",
-    storageBucket: "simple-labyrinth-cfb3f.appspot.com",
-    messagingSenderId: "708856220296",
-    appId: "1:708856220296:web:7d7ede0a40958e5735ad3d"
+    apiKey: "AIzaSyCBPaCW4XVMnCDhCM-s7Z41VhHnODmUUR0",
+    authDomain: "the-simple-labyrinth.firebaseapp.com",
+    databaseURL: "https://the-simple-labyrinth-default-rtdb.firebaseio.com",
+    projectId: "the-simple-labyrinth",
+    storageBucket: "the-simple-labyrinth.appspot.com",
+    messagingSenderId: "472189201333",
+    appId: "1:472189201333:web:f85c38a874f0cd6686c7fc"
   };
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
-</script> 
+</script>
     
 
     <link rel="stylesheet" type="text/css" href="style.css">
